--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	
 <!-- Поисковая оптимизация от Rank Math Pro - https://rankmath.com/ -->
-<title>Как кончает женщина во время секса - Чем кончают девушки и ответы на другие странные вопросы</title>
+<title>Привет Рыта</title>
 <meta name="description" content="Как понять, что женщина достигла оргазма Как кончает женщина во время секса Фаза обратного развития, или разрешения Правда ли, что женщине сложнее достичь оргазма из-за физиологических особенностей Так чем в итоге кончают-то?">
 <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
 <link rel="canonical" href="https://policewoman.ru/9497-zhenskij-orgazm-4-fazy-polovogo-akta-i-odno-obyazatelnoe-uslovie">
