--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </svg>
             Назад
         </button>
-        <h1 class="title">Eden English</h1>
+        <h1 class="title">After Eden</h1>
         <div style="width: 60px;"></div> <!-- Для выравнивания -->
     </div>
     
